--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Alexandria</string>
+    <string name="app_name" translatable="false">Alexandria</string>
 
     <!-- Menu Items -->
     <string name="books">List of Books</string>
@@ -12,14 +12,14 @@
     <string name="action_settings">Settings</string>
     <string name="scan_button">Scan</string>
     <string name="input_hint">Insert ISBN-13. Digits only.</string>
-    <string name="book_cover">Bookcover</string>
+    <string name="book_cover">Book cover</string>
 
     <string name="ok_button">Next</string>
     <string name="cancel_button">Cancel</string>
     <string name="not_found">No Book found</string>
     <string name="search">Search</string>
     <string name="delete">Delete Book</string>
-    <string name="pref_startScreen">Select Startscreen</string>
+    <string name="pref_startScreen" >Select Start screen</string>
     <string name="title_activity_settings">Settings</string>
     <string name="action_share">Share</string>
     <string name="back_button">go back</string>
